--- a/fieldsos.css
+++ b/fieldsos.css
@@ -75,6 +75,8 @@ input[type=range]::-webkit-slider-thumb {
     font-size: 85px;
     border: 0px;
     background-color: rgba(0, 0, 0, 0);
+    margin:0px;
+    padding:0px;
 }
 
 .checkboxContainer {
