--- a/fieldsos.css
+++ b/fieldsos.css
@@ -15,7 +15,7 @@ body {
     left: 50%;
     width: 100%;
     text-align: center;
-    max-width: 500px;
+    max-width: 500px;    
 }
 
 .buttonContainer { 
@@ -77,12 +77,7 @@ input[type=range]::-webkit-slider-thumb {
     margin-right: 10px;
 }
 
-.selector {
-    height: 4em;
-    width: 4em;
-    margin: 2em;
-    background-color: rgba(0, 0, 0, 0);    
-}
+
 
 .controlButton {
     font-family:monospace;
@@ -93,11 +88,52 @@ input[type=range]::-webkit-slider-thumb {
 }
 
 .checkboxContainer {
-    width: 320px;
-    margin: 25px auto;
+    width: 390px;
+    margin: 50px 100px;
     text-align: center;
 }
 
-.checkboxSubContainer {
-    float:left;
-}
+/* Customize the label (the container) */
+.checkbox {
+    display: block;
+    position: relative;
+    float: left;
+    padding-left: 70px;
+    text-align:left;    
+    cursor: pointer;    
+    width:60px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+  }
+  
+  /* Hide the browser's default checkbox */
+  .checkbox input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+    height: 0;
+    width: 0;
+  }
+    
+  /* Create a custom checkbox */
+  .checkmark {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 50px;
+    width: 50px;
+    background-color: rgba(0, 0, 0, 0);
+    border: 2px solid black;
+  }
+  
+  /* When the checkbox is checked, add a black background */
+  .checkbox input:checked ~ .checkmark {
+    background-color: black;
+  }
+  
+  .checkboxLabel
+  {
+    margin-top:15px;    
+  }
